--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ futures = "0.3.31"
 base64 = "0.22.1"
 bytes = "1.10.1"
 tokio = { version = "1.45.1", default-features = false, features = ["io-util"] }
+url = "2.5.4"
